flexmeasures/ui/static/css/flexmeasures.css
/* ... */
.leaflet-control-layers {
    box-shadow: 0 1px 5px rgba(0,0,0,0.4);
    background: var(--nav-default-background-color);
    border-radius: 5px;
}

.leaflet-control-layers-overlays label span {
    color: var(--nav-default-color);
    transition: .4s;
    -webkit-transition: .4s;
    -moz-transition: .4s;
    -ms-transition: .4s;
    -o-transition: .4s;
}

.leaflet-control-layers-overlays label span:hover {
    color: var(--nav-hover-color);
}

.leaflet-bar a.leaflet-disabled {
    cursor: default;
    background-color: var(--primary-hover-color);
    color: var(--gray);
}
.leaflet-bar a {
    text-decoration: none;
}

/* --- End Leaflet (Maps) --- */


/* --- Tables ---- */

/* scrolling */
.floatThead-wrapper table {
    width: 100%;
}
.floatThead-wrapper thead {
    background-color: var(--white);
}

.floatThead-wrapper th, td {
    padding: 8px;
}

/* bootstrap works on tables with class="table" - here we override their nice styling only with respect to vertical alignment of table elements */

.table > tbody > tr > td {
     vertical-align: middle;
}

/* sorting icons on left when header is not right aligned */

table.dataTable thead tr th:not(.text-right).sorting_asc {
  background: url("https://cdn.datatables.net/1.10.0/images/sort_asc.png") no-repeat center left;
}
table.dataTable thead tr th:not(.text-right).sorting_desc {
  background: url("https://cdn.datatables.net/1.10.0/images/sort_desc.png") no-repeat center left;
}
table.dataTable thead tr th:not(.text-right).sorting {
  background: url("https://cdn.datatables.net/1.10.0/images/sort_both.png") no-repeat center left;
}
table.dataTable thead tr th.no-sort {
    padding: 9px;
}
table.dataTable thead tr th {
    border-bottom: inherit;
}
table.dataTable.no-footer {
    border-bottom: inherit !important;
}
.dataTables_length label, .dataTables_filter label {
    font-weight: inherit;
}

/* extra buffer for bootstrap rows */
.top-buffer { margin-top:15px; }

.dataTables_wrapper {
    margin-bottom: 20px;
}

.dataTables_wrapper .paginate_button {
    outline: none;
}

body .dataTables_wrapper .dataTables_paginate .paginate_button {
    color: var(--nav-default-color) !important;
    background: var(--nav-default-background-color);
    border: none !important;
    border-radius: 4px !important;
    transition: .3s;
    -webkit-transition: .3s;
    -moz-transition: .3s;
    -ms-transition: .3s;
    -o-transition: .3s;
    -webkit-border-radius: 4px !important;
    -moz-border-radius: 4px !important;
    -ms-border-radius: 4px !important;
    -o-border-radius: 4px !important;
}

body .dataTables_wrapper .dataTables_paginate .paginate_button:not(.disabled, .current):hover {
    color: var(--nav-hover-color) !important;
    background: var(--nav-hover-background-color) !important;
}

.dataTables_wrapper .dataTables_paginate .paginate_button.disabled,
.dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover,
.dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
    color: var(--gray) !important;
    background: var(--light-gray) !important;
    box-shadow: none;
}

body .dataTables_wrapper .dataTables_paginate .paginate_button.current {
    color: var(--nav-current-color) !important;
    background: var(--nav-current-background-color);
    box-shadow: none !important;
}
body .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
    color: var(--nav-current-hover-color) !important;
    background: var(--nav-current-hover-background-color);
    box-shadow: none !important;
}

@media screen and (max-width: 640px) {
    .dataTables_wrapper .dataTables_filter {
        float: right !important;
    }

    .dataTables_wrapper .dataTables_length {
        float: left !important;
    }
}

.floatThead-wrapper {
    margin-top: 50px;
    margin-bottom: 20px;
    overflow-y: auto;
    box-shadow: 0 0 10px rgba(0,0,0,.2);
    border-radius: 6px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    -ms-border-radius: 6px;
    -o-border-radius: 6px;
}

.floatThead-wrapper .table {
    margin-bottom: 0 !important;
} 

.floatThead-wrapper .table>thead>tr>th {
    border-bottom: none !important;
    color: var(--primary-color);
    
}

.floatThead-wrapper .table>tbody>tr>td, .floatThead-wrapper .table>tbody>tr>th, .floatThead-wrapper .table>tfoot>tr>td, .floatThead-wrapper .table>tfoot>tr>th, .floatThead-wrapper .table>thead>tr>td, .table>thead>tr>th {
    padding: 15px !important;
    line-height: 1.42857143;
    vertical-align: top;
    border-top: 1px solid var(--light-gray) ;
}


/* --- End Tables ---- */


/* ---- Modal ---- */

.modal {
    z-index: 999993 !important;
    color: var(--primary-color);
}

.modal-backdrop {
    z-index: 999992 !important;
}

.close:focus, .close:hover {
    color: var(--red);
    transition: .3s;
    -webkit-transition: .3s;
    -moz-transition: .3s;
    -ms-transition: .3s;
    -o-transition: .3s;
}

/* ---- End Modal ---- */


/* ---- Side panel ---- */

@media (min-width: 768px) {
    .sidepanel-container {
        z-index: 20;
    }
    .sidepanel {
        background: var(--nav-default-background-color);
        width: calc(var(--litepicker-day-width) * 9);
        margin: 15px;
        padding: 20px 15px;
        transition: .3s;
        -webkit-transition: .3s;
        -moz-transition: .3s;
        -ms-transition: .3s;
        -o-transition: .3s;
    }
    .left-sidepanel {
        border-top-left-radius: 0px;
        border-bottom-left-radius: 0px;
        border-top-right-radius: 15px;
        border-bottom-right-radius: 15px;
    }
    .sidepanel-container > .left-sidepanel {
        transform: translateX(-106%);
    }
    .sidepanel-container:hover > .left-sidepanel,
    .sidepanel-container:active > .left-sidepanel {
        transform: translateX(-30px);
    }
}


/* ---- Date picker ---- */

.datetimepicker input {
    width: 100%;
}

.litepicker {
    font-size: 14px;
}
/* ... */

